Fixed logo cropping.

--- a/src/App.css
+++ b/src/App.css
@@ -198,13 +198,20 @@
     /*top: 0;
     right: 0;*/
     max-width: 100vw;
-    max-height: 100vh;
+    max-height: 200vh;
+    min-width: 100vw;
+    min-height: 200vh;
     /*min-width: 300px;
-    min-height: 300px;
+    min-height: 300px;*/
     margin-bottom: -100vh;
+    margin-top: -100vh;
     margin-left: 0vw;
     
-    overflow: hidden;*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    overflow: hidden;
 
 }
 
@@ -799,8 +806,6 @@
     min-height: 100%;
     margin: 0;
     border: 2px solid red;
-
-
 }
 
 .bat-container-inner {
